--- a/monitoring/sources.yaml
+++ b/monitoring/sources.yaml
@@ -3,7 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
   name: prometheus-community
-  namespace: flux-system
+  namespace: monitoring
 spec:
   interval: 10m0s
   timeout: 1m0s
