--- a/monitoring/sources.yaml
+++ b/monitoring/sources.yaml
@@ -3,9 +3,9 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
   name: prometheus-community
-  namespace: monitoring
+  namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 5m0s
   timeout: 1m0s
   url: https://prometheus-community.github.io/helm-charts
 
