--- a/monitoring/release.yaml
+++ b/monitoring/release.yaml
@@ -13,7 +13,7 @@ spec:
         name: prometheus-community
       version: '*'
   install: {}
-  interval: 10m0s
+  interval: 5m0s
   values:
     alertmanager:
       alertmanagerSpec:
@@ -91,4 +91,9 @@ spec:
               resources:
                 requests:
                   storage: 10Gi
+    prometheusOperator:
+      admissionWebhooks:
+        enabled: false
+      tls:
+        enabled: false
 
