--- a/monitoring/ingress.yaml
+++ b/monitoring/ingress.yaml
@@ -3,28 +3,33 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: traefik
   namespace: monitoring
-  annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
 
 spec:
   rules:
-    - http:
+    - host: grafana.test
+      http:
         paths:
-          - path: /grafana
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: kube-prometheus-stack-grafana
                 port:
                   number: 80
-          - path: /prometheus
+    - host: prometheus.test
+      http:
+        paths:
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: kube-prometheus-stack-prometheus
                 port:
                   number: 9090
-          - path: /alertmanager
+    - host: alertmanager.test
+      http:
+        paths:
+          - path: /
             pathType: Prefix
             backend:
               service:
