--- a/monitoring/custom-values.yaml
+++ b/monitoring/custom-values.yaml
@@ -1351,6 +1351,8 @@ prometheus-node-exporter:
 prometheusOperator:
   enabled: true
 
+  tlsProxy:
+    enabled: false
   ## Prometheus-Operator v0.39.0 and later support TLS natively.
   ##
   tls:
@@ -1364,7 +1366,7 @@ prometheusOperator:
   ## rules from making their way into prometheus and potentially preventing the container from starting
   admissionWebhooks:
     failurePolicy: Fail
-    enabled: true
+    enabled: false
     ## A PEM encoded CA bundle which will be used to validate the webhook's server certificate.
     ## If unspecified, system trust roots on the apiserver are used.
     caBundle: ""
@@ -1373,7 +1375,7 @@ prometheusOperator:
     ## certs ahead of time if you wish.
     ##
     patch:
-      enabled: true
+      enabled: false
       image:
         repository: k8s.gcr.io/ingress-nginx/kube-webhook-certgen
         tag: v1.0
