provide relative path to custom-values.yaml

--- a/flux-system/sources.yaml
+++ b/flux-system/sources.yaml
@@ -11,7 +11,7 @@ metadata:
   namespace: flux-system
 spec:
   ignore: |
-    monitoring/custom-values.yaml
+    ../monitoring/custom-values.yaml
   gitImplementation: go-git
   interval: 1m0s
   ref:
