--- a/networking/release.yaml
+++ b/networking/release.yaml
@@ -33,6 +33,12 @@ spec:
     extraEnvVars:
       TZ: America/Los_Angeles
     hostname: pihole
+    image:
+      pullPolicy: IfNotPresent
+      repository: pihole/pihole
+      tag: v5.8.1
+    maxSurge: 1
+    maxUnavailable: 1
     monitoring:
       podMonitor:
         enabled: false
