--- a/networking/release.yaml
+++ b/networking/release.yaml
@@ -87,10 +87,10 @@ spec:
       annotations:
         metallb.universe.tf/allow-shared-ip: pihole-svc
       http:
-        enabled: false
+        enabled: true
         port: 80
       https:
-        enabled: false
+        enabled: true
         port: 443
       loadBalancerIP: ""
       type: LoadBalancer
