--- a/networking/release.yaml
+++ b/networking/release.yaml
@@ -36,7 +36,7 @@ spec:
     image:
       pullPolicy: IfNotPresent
       repository: pihole/pihole
-      tag: latest
+      tag: 2021.09
     maxSurge: 1
     maxUnavailable: 1
     monitoring:
