--- a/networking/ingress.yaml
+++ b/networking/ingress.yaml
@@ -1,7 +1,7 @@
 kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: traefik
+  name: networking
   namespace: networking
   annotations:
     traefik.ingress.kubernetes.io/app-root: "/admin"
