update values for kube-prom-stack and suspend pihole

--- a/monitoring/custom-values.yaml
+++ b/monitoring/custom-values.yaml
@@ -212,7 +212,7 @@ alertmanager:
 
     # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
     # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
-      ingressClassName: traefik
+    ingressClassName: traefik
 
     annotations: {}
 
@@ -220,12 +220,12 @@ alertmanager:
 
     ## Hosts must be provided if Ingress is enabled.
     ##
-    hosts: []
+    hosts:
     - alertmanager.tang.local
 
     ## Paths to use for ingress rules - one path should match the alertmanagerSpec.routePrefix
     ##
-    paths: []
+    paths:
     - /
 
     ## For Kubernetes >= 1.18 you should specify the pathType (determines how Ingress paths should be matched)
@@ -739,6 +739,7 @@ grafana:
   ## Passed to grafana subchart and used by servicemonitor below
   ##
   service:
+    type: LoadBalancer
     portName: service
 
   ## If true, create a serviceMonitor for grafana
