enable prometheus ingress object through helm chart

--- a/monitoring/custom-values.yaml
+++ b/monitoring/custom-values.yaml
@@ -1648,6 +1648,8 @@ prometheus:
     name: ""
     annotations: {}
 
+  ingress:
+    enabled: true
   # Service for thanos service discovery on sidecar
   # Enable this can make Thanos Query can use
   # `--store=dnssrv+_grpc._tcp.${kube-prometheus-stack.fullname}-thanos-discovery.${namespace}.svc.cluster.local` to discovery
