--- a/networking/release.yaml
+++ b/networking/release.yaml
@@ -77,7 +77,7 @@ spec:
     serviceDns:
       annotations:
         metallb.universe.tf/allow-shared-ip: pihole-svc
-      loadBalancerIP: ""
+      loadBalancerIP: "10.0.0.235"
       port: 53
       type: LoadBalancer
     serviceWeb:
@@ -89,7 +89,7 @@ spec:
       https:
         enabled: true
         port: 443
-      loadBalancerIP: ""
+      loadBalancerIP: "10.0.0.235"
       type: LoadBalancer
     strategyType: RollingUpdate
 
