Revert "change coredns config file"
This reverts commit 5dce91f01f58254151db81a20172db1c9ca4f9d9.

--- a/networking/coredns-configzones.yaml
+++ b/networking/coredns-configzones.yaml
@@ -4,7 +4,7 @@ metadata:
   name: coredns-zones
   namespace: networking
 data:
-    db.tang.local: |
+    tang.local: |
       $TTL  30M
       @   IN  SOA  ns1.tang.local.  tang.local.  (
                       2021100700  ; Serial
