--- a/monitoring/releases.yaml
+++ b/monitoring/releases.yaml
@@ -76,12 +76,12 @@ spec:
           - job
           group_interval: 5m
           group_wait: 30s
-          receiver: "null"
+          receiver: "slack"
           repeat_interval: 12h
           routes:
           - match:
               alertname: Watchdog
-            receiver: "null"
+            receiver: "slack"
         templates:
         - /etc/alertmanager/config/*.tmpl
       enabled: true
