--- a/home-automation/magicmirror/servicemonitor.yaml
+++ b/home-automation/magicmirror/servicemonitor.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: magicmirror
+  namespace: home-automation
   labels:
     app: magicmirror
 spec:
