add argocd a record

--- a/networking/coredns/coredns-configzones.yaml
+++ b/networking/coredns/coredns-configzones.yaml
@@ -20,3 +20,4 @@ data:
       alertmanager.tang.local.  IN  A  10.0.0.230 
       magicmirror.tang.local.   IN  A  10.0.0.230 
       blackbox.tang.local.      IN  A  10.0.0.230 
+      argocd.tang.local.        IN  A  10.0.0.230 
