--- a/applications/metallb-config.yaml
+++ b/applications/metallb-config.yaml
@@ -10,5 +10,5 @@ spec:
   project: default
   source:
     path: networking/metallb/
-    repoURL: git@gitlab.com:darrelltang/flux-k3s.git
+    repoURL: git@github.com:DarrellTang/argocd-k3s.git
     targetRevision: metallb-update
