--- a/applications/coredns.yaml
+++ b/applications/coredns.yaml
@@ -9,6 +9,6 @@ spec:
   source:
     directory:
       recurse: true
-    path: networking/coredns
+    path: networking/coredns/
     repoURL: git@github.com:DarrellTang/argocd-k3s.git
     targetRevision: HEAD
