--- a/applications/coredns.yaml
+++ b/applications/coredns.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: namespaces
+  name: coredns
 spec:
   destination:
     server: https://kubernetes.default.svc
