--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: networking
+    namespace: pihole
     server: https://kubernetes.default.svc
   project: default
   source:
@@ -30,3 +30,6 @@ spec:
         value: LoadBalancer
     repoURL: https://mojo2600.github.io/pihole-kubernetes/
     targetRevision: 2.5.8
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
