--- a/applications/metallb-config.yaml
+++ b/applications/metallb-config.yaml
@@ -5,10 +5,13 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: networking
+    namespace: metallb
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: networking/metallb/
+    path: metallb/
     repoURL: git@github.com:DarrellTang/argocd-k3s.git
     targetRevision: metallb-update
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
