--- a/applications/metallb-config.yaml
+++ b/applications/metallb-config.yaml
@@ -9,7 +9,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: metallb/
+    path: metallb-config/
     repoURL: git@github.com:DarrellTang/argocd-k3s.git
     targetRevision: argocd-migration
   syncPolicy:
