--- a/metallb-config/pool.yaml
+++ b/metallb-config/pool.yaml
@@ -2,7 +2,7 @@ apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
   name: default
-  namespace: networking
+  namespace: metallb
 spec:
   addresses:
   - 10.0.0.230-10.0.0.240
