update annotations again

--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -25,13 +25,13 @@ spec:
       - name: serviceDns.loadBalancerIP
         value: 10.0.0.231
       - name: serviceDns.annotations
-        value: metallb.universe.tf/allow-shared-ip=pihole-svc
+        value: "metallb.universe.tf/allow-shared-ip: pihole-svc"
       - name: serviceWeb.loadBalancerIP
         value: 10.0.0.231
-      - name: serviceWeb.annotations
-        value: metallb.universe.tf/allow-shared-ip=pihole-svc
       - name: serviceWeb.type
         value: LoadBalancer
+      - name: serviceWeb.annotations
+        value: "metallb.universe.tf/allow-shared-ip: pihole-svc"
     repoURL: https://mojo2600.github.io/pihole-kubernetes/
     targetRevision: 2.9.0
   syncPolicy:
