--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -24,14 +24,14 @@ spec:
         value: "false"
       - name: serviceDns.loadBalancerIP
         value: 10.0.0.231
-      - name: serviceDns.annotations
-        value: "metallb.universe.tf/allow-shared-ip: pihole-svc"
+      - name: "serviceDns.annotations.metallb\\.universe\\.tf/allow-shared-ip"
+        value: pihole-svc
       - name: serviceWeb.loadBalancerIP
         value: 10.0.0.231
       - name: serviceWeb.type
         value: LoadBalancer
-      - name: serviceWeb.annotations
-        value: "metallb.universe.tf/allow-shared-ip: pihole-svc"
+      - name: "serviceDns.annotations.metallb\\.universe\\.tf/allow-shared-ip"
+        value: pihole-svc
     repoURL: https://mojo2600.github.io/pihole-kubernetes/
     targetRevision: 2.9.0
   syncPolicy:
