--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -19,7 +19,7 @@ spec:
       - name: hostname
         value: pihole
       - name: ingress.enabled
-        value: true
+        value: "true"
       - name: serviceDhcp.enabled
         value: "false"
       - name: serviceDns.loadBalancerIP
