--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -21,7 +21,7 @@ spec:
       - name: ingress.enabled
         value: "true"
       - name: ingress.hosts
-        value: ["pihole.tang.local"]
+        value: "pihole.tang.local"
       - name: serviceDhcp.enabled
         value: "false"
       - name: serviceDns.loadBalancerIP
