set image tag back

--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -18,6 +18,8 @@ spec:
         value: LoadBalancer
       - name: hostname
         value: pihole
+      - name: image.tag
+        value: 2022.05
       - name: ingress.enabled
         value: "true"
       - name: ingress.hosts[0]
