--- a/applications/openebs.yaml
+++ b/applications/openebs.yaml
@@ -14,6 +14,8 @@ spec:
       parameters:
       - name: jiva.enabled
         value: "true"
+      - name: jiva.replicas
+        value: 1
     repoURL: https://openebs.github.io/charts
     targetRevision: 3.3.0
   syncPolicy:
