--- a/applications/openebs-config.yaml
+++ b/applications/openebs-config.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     path: openebs-config/
     repoURL: git@github.com:DarrellTang/argocd-k3s.git
-    targetRevision: argocd-migration
+    targetRevision: feature/openebs
   syncPolicy:
     automated: {}
     syncOptions:
