--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -23,7 +23,7 @@ spec:
       - name: ingress.enabled
         value: "true"
       - name: ingress.hosts[0]
-        value: "pihole.tang.local"
+        value: "pihole.tang.home"
       - name: serviceDhcp.enabled
         value: "false"
       - name: serviceDns.loadBalancerIP
@@ -37,7 +37,7 @@ spec:
       - name: "serviceWeb.annotations.metallb\\.universe\\.tf/allow-shared-ip"
         value: pihole-svc
       - name: dnsmasq.customDnsEntries[0]
-        value: "address=/tang.local/10.0.0.230"
+        value: "address=/tang.home/10.0.0.230"
     repoURL: https://mojo2600.github.io/pihole-kubernetes/
     targetRevision: 2.9.0
   syncPolicy:
