--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -38,6 +38,8 @@ spec:
         value: pihole-svc
       - name: dnsmasq.customDnsEntries[0]
         value: "address=/tang.home/10.0.0.230"
+      - name: dnsmasq.customDnsEntries[1]
+        value: "address=/tang.local/10.0.0.230"
     repoURL: https://mojo2600.github.io/pihole-kubernetes/
     targetRevision: 2.9.0
   syncPolicy:
