--- a/applications/nginx.yaml
+++ b/applications/nginx.yaml
@@ -1,21 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-ingress
+  name: ingress-nginx
   namespace: argocd
 spec:
   destination:
-    namespace: nginx-ingress
+    namespace: ingress-nginx
     server: https://kubernetes.default.svc
   project: default
   source:
     chart: nginx-ingress
-    helm:
-      parameters:
-      - name: jiva.enabled
-        value: "true"
-      - name: jiva.replicas
-        value: "1"
     repoURL: https://kubernetes.github.io/ingress-nginx
     targetRevision: 4.2.0
   syncPolicy:
