--- a/applications/nginx.yaml
+++ b/applications/nginx.yaml
@@ -9,7 +9,7 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    chart: nginx-ingress
+    chart: ingress-nginx
     repoURL: https://kubernetes.github.io/ingress-nginx
     targetRevision: 4.2.0
   syncPolicy:
