--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -22,6 +22,8 @@ spec:
         value: "2022.05"
       - name: ingress.enabled
         value: "true"
+      - name: ingress.ingressClassName
+        value: "nginx"
       - name: ingress.hosts[0]
         value: "pihole.tang.local"
       - name: serviceDhcp.enabled
