--- a/applications/pihole.yaml
+++ b/applications/pihole.yaml
@@ -22,6 +22,14 @@ spec:
         value: "2022.05"
       - name: ingress.enabled
         value: "true"
+      - name: "ingress.annotations.nginx\\.ingress\\.kubernetes\\.io/app-root"
+        value: "/admin"
+      - name: "ingress.annotations.cert-manager\\.io/cluster-issuer"
+        value: "letsencrypt-staging"
+      - name: ingress.tls[0].secretName
+        value: "tls-pihole"
+      - name: ingress.tls[0].hosts[0]
+        value: "pihole.darrellandranae.com"
       - name: ingress.ingressClassName
         value: "nginx"
       - name: ingress.hosts[0]
