--- a/cert-manager-config/cluster-issuer-prod.yaml
+++ b/cert-manager-config/cluster-issuer-prod.yaml
@@ -13,13 +13,9 @@ spec:
       name: letsencrypt-prod
     solvers:
     - dns01:
-        webhook:
-          groupName: acme.namecheap.com
-          solverName: namecheap
+        cloudflare:
+          email: darrelltang@gmail.com
           config:
             apiKeySecretRef:
-              name: namecheap-credentials
-              key: apiKey
-            apiUserSecretRef:
-              name: namecheap-credentials
-              key: apiUser
+              name: cloudflare-api-key-secret
+              key: api-key
