--- a/cert-manager-config/cluster-issuer-prod.yaml
+++ b/cert-manager-config/cluster-issuer-prod.yaml
@@ -14,6 +14,7 @@ spec:
     solvers:
     - dns01:
         cloudflare:
+          email: darrelltang@gmail.com
           apiKeySecretRef:
             name: cloudflare-api-key-secret
             key: api-key
