--- a/cert-manager-config/cluster-issuer-staging.yaml
+++ b/cert-manager-config/cluster-issuer-staging.yaml
@@ -15,6 +15,6 @@ spec:
     - dns01:
         cloudflare:
           email: darrelltang@gmail.com
-          apiKeySecretRef:
-            name: cloudflare-api-key-secret
-            key: api-key
+          apiTokenSecretRef:
+            name: cloudflare-api-token-secret
+            key: api-token
