--- a/fffff/postgres-deploy.yaml
+++ b/fffff/postgres-deploy.yaml
@@ -12,6 +12,17 @@ spec:
       labels:
         app: postgres
     spec:
+      initContainers:
+      - name: download-csv
+        image: alpine:latest
+        command: ["sh", "-c"]
+        args:
+          - apk add curl sed
+          - curl -L -o /data/item.csv https://github.com/xivapi/ffxiv-datamining/raw/master/csv/Item.csv
+          - sed -i 1,3d /data/item.csv
+        volumeMounts:
+        - name: csv-volume
+          mountPath: /data
       containers:
       - name: postgres
         image: postgres:12
