--- a/fffff/pvc.yaml
+++ b/fffff/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: openebs-jiva-csi-retain
+  storageClassName: openebs-jiva-csi-default
   resources:
     requests:
       storage: 100Mi
