fix port name in service

--- a/fffff/api-service.yaml
+++ b/fffff/api-service.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     app: fffff-api
   ports:
-  - name: fffff-api
+  - name: http
     port: 80
     targetPort: 80
   type: ClusterIP
