--- a/fffff/frontend-service.yaml
+++ b/fffff/frontend-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fffff-api
+  name: fffff
 spec:
   selector:
-    app: fffff-api
+    app: fffff
   ports:
   - name: http
     port: 80
